--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -656,3 +656,21 @@
     font-size: 1rem;
     cursor: pointer;
 }
+
+@media (max-width: 1000px) {
+    .meet, .calendar, .drive {
+        display: none;
+    }
+}
+
+@media (max-width: 750px) {
+    .topics-section {
+        display: none;
+    }
+}
+
+@media (max-width: 860px) {
+    .calendar-teacher, .drive-teacher {
+        display: none;
+    }
+}
