--- a/front-end/styles/student-stream.css
+++ b/front-end/styles/student-stream.css
@@ -43,3 +43,10 @@
     width: 100%;
     cursor: pointer;
 }
+
+@media (max-width: 850px) {
+    
+    .bottom-left-main {
+        display: none !important;
+    }
+}
