--- a/front-end/styles/assignment.css
+++ b/front-end/styles/assignment.css
@@ -153,6 +153,12 @@
     justify-content: space-between;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .assignment-attachments .files {
     display: flex;
     flex-direction: column;
@@ -163,7 +169,7 @@
     width: 100%;
 }
 
-.assignment-attachments .files > div button {
+.assignment-attachments .files > div label {
     width: 100%;
     display: flex;
     align-items: center;
