--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -604,6 +604,25 @@
     justify-content: space-between;
 }
 
+select {
+    padding: 10px;
+    background-color: #cccccc41;
+    color: #6e6e6e;
+    font-size: 1rem;
+    width: 90%;
+    border: none;
+    padding: 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #6e6e6e;
+    outline: none;
+}
 
 /* DUE DATE SIDEBAR SECTION */
 
